Fix alignment and size for bio image

--- a/public/stylesheets/sass/stylesheet.sass
+++ b/public/stylesheets/sass/stylesheet.sass
@@ -294,7 +294,9 @@ table
 
       .description
         //padding-top: 5px
-        
+
+  #bio_image
+    text-align: center
 
 h2.super
   background: $background_dark
